<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Онлайн касса</string>

    <string name="UPC_A">UPC-A</string>
    <string name="UPC_E">UPC-E</string>
    <string name="EAN13">EAN13</string>
    <string name="EAN14">EAN14</string>
    <string name="GS1" tools:ignore="Typos">GS1</string>
    <string name="EAN8">EAN8</string>
    <string name="CODE39">CODE39</string>
    <string name="ITF">ITF</string>
    <string name="CODABAR">CODABAR</string>
    <string name="CODE93">CODE93</string>
    <string name="CODE128">CODE128</string>
    <string name="QR_CODE">QRcode</string>

    <string name="command_type">Тип команды:</string>
    <string name="cmdtype_esc">Двоичный код в принтер</string>
    <string name="cmdtype_tsc">TSC</string>
    <string name="cmdtype_cpcl">CPCL</string>
    <string name="cmdtype_zpl">ZPL</string>
    <string name="cmdtype_pin">PIN</string>

    <string name="disconnect">Отключиться</string>
    <string name="connect">Подключиться</string>
    <string name="text_print">Печать текста</string>
    <string name="image_print">Печать картинки</string>
    <string name="self_test_print">Тестовая страница</string>
    <string name="upload_image">Загрузить картинку</string>
    <string name="print">Печать</string>
    <string name="picture">Картинка</string>
    <string name="album">Альбом</string>
    <string name="choose_picture_position">Позиция картинки</string>
    <string name="tip_upload_image">Нет картинки, загрузите</string>
    <string name="insert_sdcard_tip">Вставьте SD карту</string>
    <string name="please_connect">Подключитесь</string>
    <string name="connect_type">Тип подключения:</string>
    <string name="template_1">Шаблон</string>
    <string name="template_print">Печать шаблона</string>
    <string name="choose_bluetooth_device">Выберите Bluetooth устройство</string>
    <string name="paired_devices">Соединенный</string>
    <string name="tip_have_no_paired_device">Нет соединенных устройств</string>
    <string name="tip_have_no_found_bluetooth_device">Нет устройств</string>
    <string name="search_device">Поиск</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_tip">Сообщение:</string>
    <string name="main_pls_choose_device">Выберите устройство</string>
    <string name="dialog_back">Назад</string>
    <string name="main_disconnect_click_repeatedly">Устройство отключено, не требуется перенажимать</string>
    <string name="barcode_print">Печать штрихкода</string>
    <string name="head_bar_back">Назад</string>
    <string name="title_barcode">Barcode</string>
    <string name="title_activity_barcode_print">BarcodePrintActivity</string>
    <string name="_main_connected">Подключение успешно</string>
    <string name="_main_connected_fail">Не удачное подключение</string>
    <string name="_main_disconnect">Отключено</string>

    <string name="tip_barcode_text_UPC_A">Character number：11,Range:0~9,Automatic Check</string>
    <string name="tip_barcode_text_UPC_E">Character Number: 6,Range:0~9, Automatic Check</string>
    <string name="tip_barcode_text_EAN13">Character Number: 12,Range:0~9, Automatic Check</string>
    <string name="tip_barcode_text_EAN8">Character Number: 7, Range: 0~9, Automatic Check</string>
    <string name="tip_barcode_text_CODE39" tools:ignore="TypographyDashes">Character number: 1~30, range: 0-9, A~Z, space,\"$\",\"%\",\"+\",\"-\",\".\",\"/\"</string>
    <string name="tip_barcode_text_ITF" tools:ignore="TypographyDashes">The Number Of Characters: Less Than 30 (Even), range: 0-9</string>
    <string name="tip_barcode_text_CODABAR" tools:ignore="TypographyDashes">The number of characters: 1-30, range: 0-9, A-D, "$\", "\ + \", \ "-\", \ ". \", \ "/ \", \ ": \", A-D only start to coincide and terminator</string>
    <string name="tip_barcode_text_CODE93" tools:ignore="TypographyDashes">The number of characters：1-30，range：0-9、A-D、\"$\"、\"+\"、\"-\"、\".\"、\"/\"、\":\"</string>
    <string name="tip_barcode_text_CODE128" tools:ignore="TypographyDashes">The number of characters：1-42，range：Arbitrary character</string>
    <string name="tip_barcode_text_QR_CODE">range：Arbitrary character</string>
    <string name="tip_barcode_text_ITF14">The Number Of Characters: 14</string>

    <string name="bmp_limit_width">Лимит width\n [In mm]:</string>

    <string name="tip_pls_connect_device">Подключите принтер</string>
    <string name="show_connected_devices">Показать подключенные устройства</string>
    <string name="dialog_title_connected_dev_list">Список подключенных устройств</string>
    <string name="pls_connect_printer_first">Подключите принтер сначала</string>
    <string name="adapter_usb_device">USB устройство:</string>
    <string name="choose_usb_device">Выберите USB устройство</string>
    <string name="tip_insert_usb_device">Вставьте USB устройство</string>

    <string name="temp1_title1_printer_tech">Однажды, в студёную зимнюю пору я из лесу вышел; был сильный мороз.
        Гляжу, поднимается медленно в гору лошадка, везущая хворосту воз.</string>

    <string name="temp1_content2_email">Email:i.yakubov.pro@gmail.com</string>

    <string name="wifi_settings">Настройки WiFi</string>
    <string name="refresh_wifi">Обновить WIFI</string>
    <string name="wifi_mode">WIFI режим</string>
    <string name="ssid">Точка доступа:</string>
    <string name="pwd">Пароль:</string>
    <string name="confirm_set_this_wifi">Подтвердите настройки данного WIFI</string>
    <string name="wifi_net_settings_ip_dhcp">WiFi Net настройки (IP, DHCP)</string>
    <string name="wifi_ip">IP</string>
    <string name="wifi_dhcp">DHCP</string>
    <string name="wifi_edit_ip">IP:</string>
    <string name="wifi_edit_sub_mask">Sub Mask:</string>
    <string name="wifi_edit_gateway">Gateway:</string>
    <string name="wifi_edit_dhcp">DHCP:</string>
    <string name="wifi_dhcp_disable">Отключить</string>
    <string name="wifi_dhcp_enable">Включить</string>
    <string name="wifi_save_change">Сохранить изменения</string>

    <string name="info">Справка, о приложении</string>

    <!-- main window -->
    <string name="main_sale">Продажа</string>
    <string name="x_report">X отчет (не доступен)</string>
    <string name="z_report">Z отчет (не доступен)</string>
    <string name="check_products">Учет товаров</string>
    <string name="all_settings">Настройки</string>
    <string name="registration">Регистрация</string>
    <string name="erase">C</string>
    <string name="enter">Войти</string>
    <string name="cto">Обращение в ЦТО</string>
    <string name="cto_mode">Режим ЦТО</string>

    <!-- menu -->
    <string name="settings">Настройки приложения</string>
    <string name="org">Организация</string>
    <string name="products">Номенклатура</string>
    <string name="units">Единицы измерения</string>
    <string name="sync">Синхронизация</string>

    <!-- users -->
    <string name="users">Пользователи</string>
    <string name="add_user">Добавить</string>
    <string name="position">Должность</string>
    <string name="administrator">Администратор</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="second_name">Отчество</string>

    <!-- user -->
    <string name="set_of_admin">Администратор</string>
    <string name="set_user">Пользователь</string>
    <string name="cashier">Кассир</string>
    <string name="forwards">Возвраты</string>
    <string name="discounts">Скидки</string>
    <string name="non_bigger">Скидка не более</string>
    <string name="change_costs">Изменять цены</string>
    <string name="orders">Заказы</string>
    <string name="pass">Пароль</string>
    <string name="del_pass">Удалить пароль</string>
    <string name="delete">Удалить</string>

    <!-- organization -->
    <string name="org_setting">Организация</string>
    <string name="org_name">Наименование</string>
    <string name="inn">ИНН</string>
    <string name="magazine_name">Наименование торговой точки</string>
    <string name="magazine_address">Адрес торговой точки</string>
    <string name="phone">Контактный телефон</string>

    <!-- units -->
    <string name="add_unit">Добавить</string>
    <string name="set_unit">Единица измерения</string>
    <string name="name_unit">Наименование</string>
    <string name="full_name_unit">Полное наименование</string>
    <string name="unit">Единица измерения</string>
    <string name="code_name_unit">Международный код</string>

    <!-- products -->
    <string name="product">Номенклатура</string>
    <string name="add_product">Добавить</string>
    <string name="edit_product">Номенклатура</string>
    <string name="name_product">Наименование</string>
    <string name="price">Цена</string>

    <!-- numbers -->
    <string name="percent">%</string>
    <string name="zero">0</string>

    <!-- trade -->
    <string name="sale">Чек</string>
    <string name="select_product">Подобрать номенклатуру</string>
    <string name="cash">Оплата наличными</string>
    <string name="adding_product">Расчёт номенклатуры для чека</string>
    <string name="quantity">Количество</string>
    <string name="quantity_briefly">Кол-во</string>
    <string name="sum">Сумма</string>
    <string name="add_in_receipt">Добавить в чек</string>
    <string name="sale_cash">Оплата наличными</string>
    <string name="result">Итог</string>
    <string name="contributed">Внесено</string>
    <string name="change">Сдача</string>
    <string name="receipt">Пробить чек</string>

    <!-- others -->
    <string name="pass_text">Пароль</string>
    <string name="delete_pass_text">Удалить пароль</string>
    <string name="fill_in_the_name_of_the_organization">Заполните название организации</string>
    <string name="fill_in_the_name_of_the_outlet">Заполните название торговой точки</string>
    <string name="inn_must_be_fourteen_characters">ИНН должен быть 14 знаков</string>
    <string name="individual_entrepreneur">Индивидуальный предприниматель</string>
    <string name="general_system">Общая система</string>
    <string name="simplified_system">Упрощенная система</string>
    <string name="fill_in_the_name">Заполните наименование</string>
    <string name="unit_label">Единица измерения</string>
    <string name="password_removed">Пароль удалён</string>
    <string name="fill_the_position">Заполните должность</string>
    <string name="fill_the_name">Заполните имя</string>
    <string name="wrong_password">Неправильный пароль</string>
    <string name="error_text">Ошибка</string>
    <string name="click_on_connect">Нажмите на [Подключиться] чтобы установить соединение</string>
    <string name="enter_correct_data">Введите корректные адреса</string>

</resources>







