<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/org_setting" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="InefficientWeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <Spinner
                android:id="@+id/spr_type_of_ownership"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" />

            <Spinner
                android:id="@+id/spr_taxation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" />

            <EditText
                android:id="@+id/et_org_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/org_name"
                android:inputType="textPersonName"
                android:maxLength="100"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_inn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/inn"
                android:inputType="number"
                android:maxLength="14"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_magazine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/magazine_name"
                android:inputType="textPersonName"
                android:maxLength="100"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_magazine_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/magazine_address"
                android:inputType="textPersonName"
                android:maxLength="100"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_magazine_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone"
                android:inputType="phone"
                tools:ignore="Autofill" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_ok" />

</LinearLayout>